# ravi-gsl

./: CMakeLists.txt  README.md  README.rst
cmake/: FindGSL.cmake  FindRAVI.cmake  FindRaviMatrix.cmake
docs/: reference.rst
include/: ravi_gsl.h  ravi_gsl_conf.h  ravigsl-conf.h
src/: ravi_gsl.c  ravi_gsl_internal.h
tests/: test1.lua  test_linear_fit.lua
